# -hackPSU2025

./: README.md  connectionStr.txt  llm.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test_api.py  test_json.py
app/: logging.py  main.py
app/db/: core.py
app/environment/: variables.py
app/routes/: images.py  leaderboard.py
hack-PSU-2025-frontend-anthony/hack-PSU-2025-frontend-anthony/: app.json  package-lock.json  package.json
hack-PSU-2025-frontend-anthony/hack-PSU-2025-frontend-anthony/app/: camera.tsx
hack-PSU-2025-frontend-anthony/hack-PSU-2025-frontend-anthony/app/(tabs)/: _layout.tsx  index.tsx  leaderboard.tsx
